jaeger-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: jaeger-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - hosts:
        - jaeger.kub.vatrox.ml
      secretName: jaeger-tls
  rules:
    - host: jaeger.kub.vatrox.ml
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: tracing
              servicePort: 80
